Changed some padding to margin, fixed buttons, animation stretch goal

--- a/css/index.css
+++ b/css/index.css
@@ -75,15 +75,15 @@ p {
     display: flex;
     flex-flow: column wrap;
     justify-content: flex-end;
-    padding-top: 20px;
-    padding-bottom: 23px;
+    margin-top: 20px;
+    margin-bottom: 23px;
 }
 
 .nav-header .nav-bar {
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .nav-header .nav-bar nav {
@@ -250,16 +250,27 @@ footer nav a {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-content: center;
-    height: 40px;
     width: 130px;
     border: 2px solid black;
     border-radius: 10px;
-    padding: 0;
+    padding: 10px 0;
     margin: 0;
 }
 
+.about-page .middle div .button:hover {
+    animation-name: fade;
+    animation-duration: 0.2s;
+    background: black;
+    color: white;
+}
+@keyframes fade {
+    from {background: white;}
+    to {background: black;}
+    from {color: black}
+    to {color: white;}
+}
+
 .about-page .bottom {
-    padding: 0 0 20px 20px;
-    margin-bottom: 18px;
+    padding: 0 0 0 20px;
+    margin-bottom: 38px;
 }
